// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrAccordion renders correctly 1`] = `
<li
  class="cdr-accordion"
  id="test-accordion"
>
  <h2
    class="cdr-accordion__header"
  >
    <button
      aria-controls="test-collapsible"
      aria-expanded="false"
      class="cdr-accordion__button js-cdr-accordion-button"
      id="test"
    >
      <span
        class="cdr-accordion__label"
        id="test-label"
      >
        
        label
        
      </span>
      <svg
        aria-hidden="true"
        class="cdr-icon cdr-accordion__icon closed"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        
        
        <path
          d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
          role="presentation"
        />
        
        <!--v-if-->
      </svg>
    </button>
  </h2>
  <div
    class="cdr-accordion__content-container closed"
    style="max-height: 0;"
  >
    <div
      aria-hidden="true"
      class="cdr-accordion__content closed"
      id="test-collapsible"
    >
      
      This is some slot text.
      
    </div>
  </div>
</li>
`;

exports[`CdrAccordion renders correctly unwrapped 1`] = `
<li
  class="cdr-accordion"
  id="test-accordion"
>
  <h2
    class="cdr-accordion__header--unwrapped"
  >
    <button
      aria-controls="test-collapsible"
      aria-expanded="false"
      class="cdr-accordion__button js-cdr-accordion-button"
      id="test"
    >
      <span
        class="cdr-accordion__label"
        id="test-label"
      >
        
        label
        
      </span>
      <svg
        aria-hidden="true"
        class="cdr-icon cdr-accordion__icon closed"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        
        
        <path
          d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
          role="presentation"
        />
        
        <!--v-if-->
      </svg>
    </button>
  </h2>
  <div
    class="cdr-accordion__content-container closed"
    style="max-height: 0;"
  >
    <div
      aria-hidden="true"
      class="cdr-accordion__content closed"
      id="test-collapsible"
    >
      
      This is some slot text.
      
    </div>
  </div>
</li>
`;
